--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
 	<table id="table-1" class="middle" border="1" style="border: 1px solid black; border-spacing: 1px; width:100%">
 		<tr>
 			<td id="t11" style="text-align:left;width:100px"">left</td>
-			<td id="t12" style="text-align:center; width:100px">center</td>
-			<td id="t13"style="text-align:right;width:100px">right</td>
+			<td id="t12" class="center" style="text-align:center; width:100px">center</td>
+			<td id="t13" id="t13" class="right" style="text-align:right;width:100px">right</td>
 		</tr>
 		<tr>
 			<td id="t21" style="text-align:left;width:100px"">left</td>
@@ -75,17 +75,17 @@
             
             <table id="table-3" class="middle" style="width: 100%; border-collapse: collapse; border-spacing: 0; margin: 15px 0; border: 1px solid black;">
                 <tr style="background-color: green; color: white;">
-                    <td colspan="3" style="padding: 8px; border: 1px solid black;"></td>
+                    <td colspan="3" style="border:1px solid black; padding:1px;""></td>
                 </tr>
                 <tr>
-                    <td style="padding: 8px; border: 1px solid black;"></td>
-                    <td id="t-image"  style="padding: 8px; border: 1px solid black; background-color: #e3f2fd; text-align: center;">
-                        <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="HTML Code Example" s>
+                    <td style="border:1px solid black; padding:1px;"></td>
+                    <td id="t-image"  style="border:1px solid black; padding:1px;">
+                        <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="HTML Code Example"  >
                     </td>
-					 <td style="padding: 8px; border: 1px solid black;"></td>
+					 <td style="border:1px solid black; padding:1px;"></td>
                 </tr>
                 <tr style="background-color: blue; color: white;">
-                    <td colspan="3" style="padding: 8px; border: 1px solid black;"></td>
+                    <td colspan="3" style="border:1px solid black; padding:1px;"></td>
                 </tr>
             </table>
         </div>
