--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<!--Table 1-->
 	
 	 <div style="background-color: white; border-radius: 10px; padding: 20px; margin-bottom: 30px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
-            <h2 style="color: #333; margin-bottom: 15px; padding-bottom: 10px; border-bottom: 2px solid #ddd;">Table 1: Alignment Classes</h2>
+            <h2 style="color: #333; margin-bo ttom: 15px; padding-bottom: 10px; border-bottom: 2px solid #ddd;">Table 1: Alignment Classes</h2>
 	<table id="table-1" class="middle" border="1" style="border: 1px solid black; border-spacing: 1px; width:100%">
 		<tr>
 			<td id="t11" style="text-align:left;width:100px"">left</td>
@@ -75,7 +75,7 @@
             
             <table id="table-3" class="middle" style="width: 100%; border-collapse: collapse; border-spacing: 0; margin: 15px 0; border: 1px solid black;">
                 <tr style="background-color: green; color: white;">
-                    <td colspan="3" style="border:1px solid black; padding:1px;""></td>
+                    <td colspan="3" style="border:1px solid black; padding:1px;"></td>
                 </tr>
                 <tr>
                     <td style="border:1px solid black; padding:1px;"></td>
