--- a/main.html
+++ b/main.html
@@ -13,21 +13,21 @@
 	
 	 <div style="background-color: white; border-radius: 10px; padding: 20px; margin-bottom: 30px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
             <h2 style="color: #333; margin-bo ttom: 15px; padding-bottom: 10px; border-bottom: 2px solid #ddd;">Table 1: Alignment Classes</h2>
-	<table id="table-1" class="middle" border="1" style="border: 1px solid black; border-spacing: 1px; width:100%">
+	<table id="table-1" class="middle" border="1" style="border: 1px solid black; border-spacing: 1px; border-collapse: collapse;">
 		<tr>
-			<td id="t11" style="text-align:left;width:100px"">left</td>
-			<td id="t12" class="center" style="text-align:center; width:100px">center</td>
-			<td id="t13" id="t13" class="right" style="text-align:right;width:100px">right</td>
+			<td id="t11" style="border: 1px solid black; padding: 1px; text-align: left;">left</td>
+			<td id="t12" class="center" style="border: 1px solid black; padding: 1px; text-align: center;">center</td>
+			<td id="t13" class="right" style="border: 1px solid black; padding: 1px; text-align: right;">right</td>
 		</tr>
 		<tr>
-			<td id="t21" style="text-align:left;width:100px"">left</td>
-			<td id="t22"style="text-align:center; width:100px">center</td>
-			<td id="t23" style="text-align:right;width:100px">right</td>
+			<td id="t21-1" style="border: 1px solid black; padding: 1px; text-align: left;">left</td>
+			<td id="t22" style="border: 1px solid black; padding: 1px; text-align: center;">center</td>
+			<td id="t23" style="border: 1px solid black; padding: 1px; text-align: right;">right</td>
 		</tr>
 		<tr>
-			<td id="t31" style="text-align:left;width:100px"">left</td>
-			<td id="t32" style="text-align:center; width:100px">center</td>
-			<td id="t33" style="text-align:right;width:100px">right</td>
+			<td id="t31" style="border: 1px solid black; padding: 1px; text-align: left;">left</td>
+			<td id="t32" style="border: 1px solid black; padding: 1px; text-align: center;">center</td>
+			<td id="t33" style="border: 1px solid black; padding: 1px; text-align: right;">right</td>
 		</tr>
 	</table>
 	</div>
@@ -36,7 +36,7 @@
 	   <div style="background-color: white; border-radius: 10px; padding: 20px; margin-bottom: 30px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
             <h2 style="color: #333; margin-bottom: 15px; padding-bottom: 10px; border-bottom: 2px solid #ddd;">Table 2: Colspan Example</h2>
             
-            <table id="table-2" class="middle" style="width: 100%;" border="1">
+            <table id="table-2" class="middle" style="border: 1px solid black; border-spacing: 1px; border-collapse: collapse;">
                 <tr>
                     <td id="t21" colspan="6" style="width:100px;height:20px"></td>
                 </tr>
@@ -73,7 +73,7 @@
 		<div style="background-color: white; border-radius: 10px; padding: 20px; margin-bottom: 30px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
             <h2 style="color: #333; margin-bottom: 15px; padding-bottom: 10px; border-bottom: 2px solid #ddd;">Table 3: Image and Color Styling</h2>
             
-            <table id="table-3" class="middle" style="width: 100%; border-collapse: collapse; border-spacing: 0; margin: 15px 0; border: 1px solid black;">
+            <table id="table-3" class="middle" style="border: 1px solid black; border-spacing: 1px; border-collapse: collapse;">
                 <tr style="background-color: green; color: white;">
                     <td colspan="3" style="border:1px solid black; padding:1px;"></td>
                 </tr>
